<resources>
    <string name="app_name">IntelliHome</string>
    <string name="home">Home</string>
    <string name="rooms">Rooms</string>
    <string name="routines">Routines</string>
    <string name="title_activity_bottom_navigation">BottomNavigationActivity</string>
    <string name="preference_file_key">async_response</string>
    <string name="settings">Settings</string>
    <string name="most_used">Most Used</string>
    <string name="switches">Switch</string>
    <string name="add_room">Add Room</string>
    <string name="cancel">Cancel</string>
    <string name="no_dev">NO Devices</string>
    <string name="up">UP</string>
    <string name="down">DOWN</string>
    <string name="status">Status</string>
    <string name="intensity">Intensity</string>
    <string name="color">Color</string>
    <string name="temperature">Temperature</string>
    <string name="heat">Heat</string>
    <string name="grill">Grill</string>
    <string name="convection">Convection</string>
    <string name="mode">Mode</string>
    <string name="vertical">Vertical swing</string>
    <string name="horizontal">Horizontal swing</string>
    <string name="speed">Speed</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="lock">Lock</string>
    <string name="unlock">Unlock</string>
    <string name="locked">Lock</string>
    <string name="refri_temp">Refrigerator temperature</string>
    <string name="freezer_temp">Freezer temperature</string>
    <string name="notifications">Notifications</string>
    <string name="help">Help</string>
    <string name="about_dev">About Developer</string>
    <string name="title_activity_notification">NotificationActivity</string>
    <string name="ac">Air Conditioner</string>
    <string name="door">Door</string>
    <string name="timer">Timer</string>
    <string name="blind">Blind</string>
    <string name="oven">Oven</string>
    <string name="lamp">Lamp</string>
    <string name="alarm">Alarm</string>
    <string name="refri">Refrigerator</string>
    <string name="notificationText">the divice was changed</string>
    <string name="errorAddRoom">There was a problem adding </string>
    <string name="successAddRoom"> added successfully</string>
    <string name="networkError"> you have no network connection, please connect</string>
    <string-array name="choose_heat">
        <item>conventional</item>
        <item>bottom</item>
        <item>top</item>
    </string-array>

    <string-array name="choose_grill">
        <item>large</item>
        <item>eco</item>
        <item>off</item>
    </string-array>

    <string-array name="choose_convection">
        <item>normal</item>
        <item>eco</item>
        <item>off</item>
    </string-array>


    <string-array name="choose_mode_ac">
        <item>cool</item>
        <item>heat</item>
        <item>fan</item>
    </string-array>

    <string-array name="choose_vertical">
        <item>auto</item>
        <item>22</item>
        <item>45</item>
        <item>67</item>
        <item>90</item>
    </string-array>

    <string-array name="choose_horizontal">
        <item>auto</item>
        <item>-90</item>
        <item>-45</item>
        <item>0</item>
        <item>45</item>
        <item>90</item>
    </string-array>

    <string-array name="choose_speed">
        <item>auto</item>
        <item>25</item>
        <item>50</item>
        <item>75</item>
        <item>100</item>
    </string-array>


    <string-array name="choose_fridge">
        <item>default</item>
        <item>vacation</item>
        <item>party</item>
    </string-array>

    <string name="about_text">Developers: Santiago Bassani, Bianca Ritorto, Alejo Aquili,
    Francisco Sanguineti.</string>

    <string name="help_text">For help using the app, please contact the developers.
    britorto@itba.edu.ar
    sbassani@itba.edu.ar
    aaquili@itba.edu.ar
    fsanguineti@itba.edu.ar</string>

    </resources>
