<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <PreferenceCategory android:title="@string/settings">

        <ListPreference
            android:key="list_preference" />

        <Preference
            android:title="@string/language">
            <intent android:action="android.intent.action.VIEW"/>
        </Preference>

        <Preference
            android:title="@string/notifications">
            <intent android:action="android.intent.action.VIEW"/>
        </Preference>

        <Preference
            android:title="@string/help">
            <intent android:action="android.intent.action.VIEW"/>
        </Preference>

        <Preference
            android:title="@string/about_dev">
            <intent android:action="android.intent.action.VIEW"/>
        </Preference>

    </PreferenceCategory>
</PreferenceScreen>