<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/navigation_home"
        android:checked="true"
        android:enabled="true"
        android:icon="@drawable/ic_home"
        android:title="@string/home"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/navigation_rooms"
        android:enabled="true"
        android:icon="@drawable/ic_rooms"
        android:title="@string/rooms"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/navigation_routines"
        android:enabled="true"
        android:icon="@drawable/ic_routines"
        android:title="@string/routines"
        app:showAsAction="ifRoom"/>

</menu>