<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:baselineAligned="false"
    android:paddingTop="60dp"
    android:paddingBottom="80dp">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_weight="1"
        android:padding="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/status"
            android:layout_marginBottom="30dp"
            android:textColor="@color/colorPrimary"/>


    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_weight="1"
        android:padding="20dp">

        <ToggleButton
            android:id="@+id/toggle_blind"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textOff="@string/up"
            android:textOn="@string/down" />
    </LinearLayout>

</LinearLayout>