<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="horizontal"
    android:baselineAligned="false"
    android:paddingTop="60dp"
    android:paddingBottom="80dp">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical"
        android:padding="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="35dp"
            android:text="@string/status"
            android:textColor="@color/colorPrimary" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:text="@string/temperature"
            android:textColor="@color/colorPrimary" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:text="@string/mode"
            android:textColor="@color/colorPrimary" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/vertical"
            android:layout_marginBottom="20dp"
            android:textColor="@color/colorPrimary" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/horizontal"
            android:layout_marginBottom="20dp"
            android:textColor="@color/colorPrimary" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/speed"
            android:layout_marginBottom="20dp"
            android:textColor="@color/colorPrimary" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical"
        android:padding="20dp">

        <Switch
            android:id="@+id/switch_ac"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            tools:layout_editor_absoluteX="311dp"
            tools:layout_editor_absoluteY="16dp" />

        <SeekBar
            android:id="@+id/seekBar_ac"
            android:layout_width="160dp"
            android:layout_height="15dp"
            android:layout_marginBottom="20dp" />

        <Spinner
            android:id="@+id/choose_mode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp" />

        <Spinner
            android:id="@+id/choose_vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp" />

        <Spinner
            android:id="@+id/choose_horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp" />

        <Spinner
            android:id="@+id/choose_speed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp" />


    </LinearLayout>

</LinearLayout>